Bug 470812 - Deleting a widget doesn't close its popup if it happened to be open at the moment it was deleted
Summary: Deleting a widget doesn't close its popup if it happened to be open at the mo...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.27.5
Platform: Neon Linux
: LO minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 496138 504980 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-08 23:19 UTC by esperluette08
Modified: 2026-02-28 16:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.2
Sentry Crash Report:


Attachments
Application launcher still visible even the widget has been deleted (confirmed by the notification) (481.83 KB, image/png)
2023-06-08 23:19 UTC, esperluette08
Details

Note You need to log in before you can comment on or make changes to this bug.
Description esperluette08 2023-06-08 23:19:13 UTC
Created attachment 159551 [details]
Application launcher still visible even the widget has been deleted (confirmed by the notification)

SUMMARY
Deleting an Application Launcher/Menu, when clicking then right-clicking fast (during the opening animation of the menu/launcher, I guess) doesn't close the launcher/menu.

Tested on a (slow) VM, it may be more difficult to reproduce on a fast computer.

STEPS TO REPRODUCE
1. Adding Application Launcher or/and Application Menu to desktop
2. Click on the widget then immediately right-click to show the menu
3. Select "Delete Application Launcher/Menu" to delete the widget (with the menu/launcher still visible)

OBSERVED RESULT
The widget is deleted, a notification confirms it, but the launcher/menu is still visible (see screenshot).

It's a minor bug since clicking anywhere outside the menu/launcher close it.

EXPECTED RESULT
The widget should close the menu/launcher once deleted (or maybe even on right-click, cancelling the opening).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon Live (20230504-0714)
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
Qt Version: 5.15.9
Graphics: X11
Comment 1 Nate Graham 2023-06-09 19:28:11 UTC
Technically the applet isn't deleted internally until you close the notification, so that's why it's still able to appear after being deleted. If you close the notification when it's in this state, the popup will disappear.

We already handle this circumstance by blocking a widget's ability to be activated by keyboard shortcuts after it's been deleted; I guess we should also make sure to close it if it happens to be open when deleted.
Comment 2 Nate Graham 2024-11-13 18:25:03 UTC
*** Bug 496138 has been marked as a duplicate of this bug. ***
Comment 3 Niccolò Venerandi 2025-10-26 16:11:25 UTC
*** Bug 504980 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2026-02-25 13:38:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1449
Comment 5 Tobias Fella 2026-02-27 18:37:02 UTC
Git commit 38a9957cadaaf06b912724650674fb835aeb79ac by Tobias Fella, on behalf of Tobias Fella.
Committed on 27/02/2026 at 18:33.
Pushed by tfella into branch 'master'.

Close applets when removing them

M  +8    -0    src/plasmaquick/appletquickitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/38a9957cadaaf06b912724650674fb835aeb79ac
Comment 6 Nate Graham 2026-02-28 00:50:51 UTC
Git commit ec61c13791e7b213e32398d42035cee61d0aa7af by Nate Graham.
Committed on 28/02/2026 at 00:45.
Pushed by ngraham into branch 'Plasma/6.6'.

Close applets when removing them


(cherry picked from commit 38a9957cadaaf06b912724650674fb835aeb79ac)

Co-authored-by: Tobias Fella <tobias.fella@kde.org>

M  +8    -0    src/plasmaquick/appletquickitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/ec61c13791e7b213e32398d42035cee61d0aa7af
Comment 7 esperluette08 2026-02-28 16:02:35 UTC
Many thanks!