Close applets when removing them

BUG: 470812